<?php

namespace App\Enum;

enum InventoryDirection: string
{
	case IN = 'in';
	case OUT = 'out';
}
